salesforce-main/src/main/default/objects/Employment_History__c/Employment_History__c.object-meta.xml
<CustomObject>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EH{0}</displayFormat>
        <label>Employment History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>