salesforce-main/src/main/default/objects/Employment_History__c/fields/Currently_Employed__c.field-meta.xml
<CustomField>
    <fullName>Currently_Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the student is currently employed at this organization.</description>
    <label>Currently Employed</label>
    <type>Checkbox</type>
</CustomField>