salesforce-main/src/main/default/objects/Employment_History__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <description>Name of the employer</description>
    <label>Employer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>