salesforce-main/src/main/default/objects/Employment_History__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date employment began at this employer.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>