salesforce-main/src/main/default/objects/Employment_History__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <description>Student this employment history record belong to.</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employment History</relationshipLabel>
    <relationshipName>Employment_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>