salesforce-main/src/main/default/objects/Employment_History__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title held for this position</description>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>